# gpui_component_template

./: .rustfmt.toml  Cargo.toml
src/: main.rs  second_tab.rs  themes.rs  title_bar.rs
